css/global.css
/* ... */
#FooterNavLeft {float:left;text-align:left;margin-top: 10px;}
#FooterLanguages{margin-left:15px;}
#login_box #Footer {margin: 0px 0px 10px 0px;}

#CentralSpaceContainer {
    margin:0px 15px 20px;
    padding:0 0 0 0;
    text-align:left;
    }
#CentralSpaceContainerRestrict {margin:0px 15px 20px 25px;padding:0;text-align:left;}
#CentralSpaceLogin {margin: 2em auto 4em;padding:0;width: 760px;text-align:left;}
#CentralSpace {text-align:left;position:relative;}

.TopInpageNav {clear: left;margin-bottom:20px;margin-right: 0;position:relative;}
.BottomInpageNav {clear: left;padding-top: 5px;margin: 20px 15px 20px 0px; position:relative;}
.BottomInpageKey {margin-right: 15px; clear: left; text-align: left;}
.TopInpageNavLeft{float:left;padding-right:120px;}
.TopInpageNavRight{position:absolute;right:0;top:3px;width:max-content;text-align:right;}
.InpageNavLeftBlock {display:inline-block; *display: inline; *zoom: 1;text-align:left;margin: 0 20px 0 0;}
.InpageNavRightBlock {display:inline-block; *display: inline; *zoom: 1;text-align:left;margin: 0 15px 0 0;}
.BottomInpageNavLeft {float:left;}
.BottomInpageNavRight{float:right;margin-right:10px;text-align:right;}
.BottomInpageNavRight .TopInpageNavRight {position:relative;}
.TopInpageNav a:link, .TopInpageNav a:visited, .BottomInpageNav a:link, .BottomInpageNav a:visited , #CentralSpaceLogin a:link, #CentralSpaceLogin a:visited {text-decoration:none;}
.TopInpageNav a:hover, .TopInpageNav a:active, .BottomInpageNav a:hover, .BottomInpageNav a:active, #CentralSpaceLogin a:hover, #CentralSpaceLogin a:active {text-decoration:underline;}

.HorizontalNav ul {padding:0.2em 0;margin:0;list-style:none;white-space: nowrap; overflow: hidden;font-size: 0px;}
.HorizontalNav li {display:inline;padding:0 0.35em 0 0.5em;margin:0px; font-size: 16px; line-height: 36px;}
.HorizontalNav a:link, .HorizontalNav a:visited {text-decoration:none;}
.HorizontalNav a:hover, .HorizontalNav a:active {text-decoration:underline;}
.HorizontalWhiteNav li:first-child {border-left:none;}
.HorizontalNav li:first-child {border-left:none;}
#CollectionMinRightNav li:first-child {border-left:none;}

/*Collection layout*/
#CollectionMenu{width: 206px;position: absolute;left: 25px;top: 6px;text-align:left;}
#CollectionMenuExp{width: 216px;position: absolute;left: 25px;top: 6px;text-align:left;}
#CollectionSpace{font-size: 0.95em;text-align:left; margin-top: 3px;}
.CollectionSpace{position: absolute;left: 249px;top: 6px;}
.CollectionSpaceExp {position: absolute;left: 249px;top: 6px;font-size: 0.95em;text-align:left;}
.CollectionStatsAnon {margin-bottom:15px;}
.CollectBack h2 {font-size: 1.3em;}
#CollectionMenu ul {padding:0.2em 0;margin:0;list-style:none;}
#CollectionMenu li {padding:0;margin:0px 8px 1px 0px;float:left;white-space:nowrap;}
#CollectionMenuExp ul {padding:0.2em 0;margin:0;list-style:none;}
#CollectionMenuExp li {padding:0;margin:0px 8px 1px 0px;float:left;white-space:nowrap;}
.CollectBack a:link, .CollectBack a:visited {text-decoration:none;}
.CollectBack a:hover, .CollectBack a:active {text-decoration:underline;}

.CollectBack form {padding:0; margin:0;}
.CollectBack .SearchWidth {width: 190px;font-size: 0.9em;margin: 0px 0px;padding-right: 28px;}
.CollectBack .SearchWidthExp {width: 200px;font-size: 0.9em;margin: 0px 0px;padding: 0px;}
.CollectBack .SearchItem {margin: 0 0 10px;padding: 0;}
.CollectBack .MinSearchItem {margin: 0;padding: 0;}

#CentralSpace .SearchWidth {width: 550px;font-size: 0.9em ;margin: 0px 0px;}
#CentraSpace .SearchWidthExp {width:200px;font-size: 0.9em ;margin: 0px 0px;padding: 0px;}
#CentralSpace .SplitSearch {float: left; margin-left: 5px;margin-right: 5px;}
.NumberSearchWidth {font-size: 0.9em;width:80px;font-size: 0.9em;margin: 0px 0px;padding: 0px;margin-bottom:3px;}

.CollectionPanelShell {padding:5px;float: left;margin: 0px 10px 10px 0px;width: 110px;text-align: left;border-radius: 4px;}
.CollectionPanelInfo{width: 110px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
.CollectionResourceAlign {width:110px;height:90px;text-align: center;vertical-align: middle;}

#CollectionMinTitle{float: left;margin: 4px 10px 0px 25px;}
#CollectionMinDropTitle{float: left;padding:0.2em 0em;margin-top: 6px;}
#CollectionMinDrop{float: left;margin: 4px 0px 0px;padding:0.2em 0em}
#CollectionMinDrop form{margin:0;padding:0}
#CollectionMinitems{float: left;margin: 5px 10px 0px;padding:0.35em 0em}
#CollectionMinRightNav{float: right;margin: 4px 25px 0px 0px;padding:0.2em 0em}
#CollectionMinRightNav #toggleThumbsLink, #CollectionMinRightNav .ActionsContainer {float:right;}
#CollectionMinRightNav.CollectionBasket #toggleThumbsLink {float: none;}
.CollectionTitleLinks a {margin: 5px 4px;}
#CollectionMinDiv .ToggleThumbsContainer {float: left; padding: 0 12px 0 24px; margin-top: 9px;border-right: 1px solid #E0E0E0;}
#CollectionMinDiv #CollectionMinDropTitle {margin-left: 12px;}

#CollectionMinDrop .SearchWidth {width: 190px;margin:0; min-height: 20px;}
#CollectionMinDrop .SearchWidthExp {width: 200px;font-size: 0.7em ;margin:0;padding: 0;}
#CollectionMinRightNav ul {padding:0em 0;margin:0;list-style:none;}
#CollectionMinRightNav li {display:inline;padding:0 0.35em 0 0.5em;margin:0px;}

/* Chosen support - General */
.chosen-container .chosen-results li {word-wrap: normal;}

/* Chosen support - Collection bar */
.chosen-container.chosen-drop-up.chosen-container-active.chosen-with-drop .chosen-drop {border-top-left-radius: 4px; border-top-right-radius: 4px; border-bottom-right-radius: 0px; border-bottom-left-radius: 0px;}
.chosen-container.chosen-drop-up.chosen-container-active.chosen-with-drop .chosen-single {border-top-left-radius: 0px; border-top-right-radius: 0px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px;}
.chosen-container.chosen-drop-up .chosen-drop {top: auto; bottom: 100%;}
#CollectionDiv #CollectionMinDiv .chosen-drop {display:none;}
/* ... */

